[gd_scene load_steps=24 format=2]

[ext_resource path="res://ui/character_sheet/card_preview/CardPreview.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/mini_icons_resistance.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ninepatch_card_border_black.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/card_background_no_affinity.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/mini_icons_brains.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/rarity.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/mini_icons_agility.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/human_race.png" type="Texture" id=10]
[ext_resource path="res://ui/character_sheet/Attribute.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/common/AffinityIcon.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/mini_icons_brawn.png" type="Texture" id=13]
[ext_resource path="res://ui/common/Tooltip.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/ninepatch_tooltip_border.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/mini_icons_armor.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/mini_icons_health.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/affinity_balance.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/affinity_chaos.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/affinity_life.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/nine_patch.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/affinity_order.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/affinity_death.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/nine_patch_black.png" type="Texture" id=24]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CardPreview" type="NinePatchRect"]
margin_left = 224.0
margin_top = 10.0
margin_right = 416.0
margin_bottom = 280.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 190.0
margin_bottom = 268.0
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardNameContainer" type="NinePatchRect" parent="."]
margin_left = 34.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 39.0
texture = ExtResource( 24 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="CardNameContainer"]
margin_left = 4.0
margin_top = 1.0
margin_right = 150.0
margin_bottom = 31.0
texture = ExtResource( 21 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Label" type="Label" parent="CardNameContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 145.0
margin_bottom = 23.0
text = "placeholder_card_name"

[node name="IconContainer" type="NinePatchRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="IconContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 33.0
margin_bottom = 33.0
texture = ExtResource( 10 )

[node name="Requirements" type="NinePatchRect" parent="."]
margin_left = 7.0
margin_top = 94.0
margin_right = 185.0
margin_bottom = 263.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Requirements"]
margin_left = 1.0
margin_top = 4.0
margin_right = 177.0
margin_bottom = 168.0
texture = ExtResource( 21 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Agility" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 42.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 52.0
icon = ExtResource( 9 )
tint = Color( 1, 0.921569, 0.568627, 1 )
value = 3
modifier = true

[node name="Brawn" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 74.0
margin_top = 20.0
margin_right = 106.0
margin_bottom = 52.0
icon = ExtResource( 13 )
tint = Color( 1, 0.466667, 0.466667, 1 )
value = 4
modifier = true

[node name="Brains" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 106.0
margin_top = 20.0
margin_right = 138.0
margin_bottom = 52.0
icon = ExtResource( 6 )
tint = Color( 0.607843, 0.92549, 1, 1 )
value = 2
modifier = true

[node name="Armor" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 42.0
margin_top = 52.0
margin_right = 74.0
margin_bottom = 84.0
icon = ExtResource( 16 )
value = 2
modifier = true

[node name="Resistance" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 74.0
margin_top = 52.0
margin_right = 106.0
margin_bottom = 84.0
icon = ExtResource( 3 )
tint = Color( 0.811765, 0.443137, 1, 1 )
value = 1
modifier = true

[node name="HP" parent="Requirements" instance=ExtResource( 11 )]
margin_left = 106.0
margin_top = 52.0
margin_right = 138.0
margin_bottom = 84.0
icon = ExtResource( 17 )
tint = Color( 1, 0, 0, 1 )
value = 3
modifier = true

[node name="RarityAndType" type="NinePatchRect" parent="."]
margin_left = 6.0
margin_top = 80.0
margin_right = 186.0
margin_bottom = 100.0
texture = ExtResource( 24 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="RarityAndType"]
margin_left = 23.0
margin_top = 1.0
margin_right = 179.0
margin_bottom = 19.0
texture = ExtResource( 21 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Label" type="Label" parent="RarityAndType"]
margin_left = 28.0
margin_top = 3.0
margin_right = 175.0
margin_bottom = 17.0
text = "placeholder_card_type"

[node name="Rarity" type="NinePatchRect" parent="RarityAndType"]
margin_top = -2.0
margin_right = 24.0
margin_bottom = 22.0
mouse_filter = 0
texture = ExtResource( 24 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="RarityAndType/Rarity"]
margin_left = 1.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 21 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="RarityAndType/Rarity"]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" parent="RarityAndType/Rarity" instance=ExtResource( 14 )]
margin_left = 2.0
margin_right = 18.0
custom_styles/panel = SubResource( 2 )
description = "Rarity"

[node name="Affinity" type="Control" parent="."]
margin_left = 7.0
margin_top = 43.0
margin_right = 184.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AffinityLife" parent="Affinity" instance=ExtResource( 12 )]
modulate = Color( 1, 0.960784, 0.713726, 1 )
self_modulate = Color( 0.121569, 0.121569, 0.121569, 0.498039 )
margin_left = 8.0
margin_right = 40.0
texture = ExtResource( 20 )
tint = Color( 1, 0.960784, 0.713726, 1 )

[node name="AffinityOrder" parent="Affinity" instance=ExtResource( 12 )]
modulate = Color( 0.470588, 0.72549, 1, 1 )
margin_left = 40.0
margin_right = 72.0
texture = ExtResource( 22 )
tint = Color( 0.470588, 0.72549, 1, 1 )

[node name="AffinityBalance" parent="Affinity" instance=ExtResource( 12 )]
modulate = Color( 0.360784, 0.827451, 0.282353, 1 )
self_modulate = Color( 0.121569, 0.121569, 0.121569, 0.498039 )
margin_left = 72.0
margin_right = 104.0
texture = ExtResource( 18 )
tint = Color( 0.360784, 0.827451, 0.282353, 1 )

[node name="AffinityChaos" parent="Affinity" instance=ExtResource( 12 )]
modulate = Color( 0.85098, 0.180392, 0.180392, 1 )
margin_left = 104.0
margin_right = 136.0
texture = ExtResource( 19 )
tint = Color( 0.85098, 0.180392, 0.180392, 1 )

[node name="AffinityDeath" parent="Affinity" instance=ExtResource( 12 )]
modulate = Color( 0.721569, 0.694118, 0.756863, 1 )
self_modulate = Color( 0.121569, 0.121569, 0.121569, 0.498039 )
margin_left = 136.0
margin_right = 168.0
texture = ExtResource( 23 )
tint = Color( 0.721569, 0.694118, 0.756863, 1 )
